0.1.11
	
2019-08-26  sverker  <sverker@sverker-HP-Pavilion-g6-Notebook-PC>

	* Added information that this is for Python 2 only and a Python 3
	version is available.

	guppy 0.1.10
	
	
2013-04-25  sverker  <sverker@sverker-HP-Pavilion-g6-Notebook-PC>

	* guppy/sets/test.py (Test.test1): Added checks for Python 2.7

2011-05-24  Sverker Nilsson  <sverker@sverker-laptop>

	* src/heapy/hv_cli_dictof.c (hv_get_objects): New function that
	emulates gc_get_objects because of optimizations to the dict
	implementation which made them non-gc-tracked sometimes.
	
	(hv_cli_dictof_update_new_method): Relies on new function
	hv_get_objects to get at all dict objects in the heap.

2011-02-24  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/Part.py : Removed a failing assert in lack of a
	better solution. The result may perhaps differ sometimes from
	the true result, depending on the definition heap before/after.
	

2010-06-08  Sverker Nilsson  <sverker@sverker-laptop>

	* src/sets/bitset.c (mutbitset_iop_PyLongObject): Don't multiply
	with SHIFT if _PyLong_Frexp is used
	
	* guppy/heapy/test/test_Part.py (MixedCase.test_1): Changed the
	test result if sys.version >= 2.7; because the size of strings
	was optimized 8 bytes. (How ? )

	* src/sets/bitset.c (mutbitset_iop_PyLongObject): Used
	_PyLong_Frexp instead of _PyLong_AsScaledDouble if
	PY_VERSION_HEX >= 0x02070000 . (_PyLong_AsScaledDouble disappeared
	but I think I should complain, couldn't figure out how to add an
	issue with the tracker.)

2010-02-16  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/sets/test.py (Test.test16.tsv): Expected OverflowError
	instead of ValueError, an inconsequential change to do with
	possiboe test error reporting.

2010-02-15  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/test/test_Classifiers.py
	(SpecialCases.test_dictowner, SpecialCases.test_alt_retclaset):
	Changed to use clock() instead of time() for cpu time